<resources>
    <string name="app_name">HTTP Status Stuff</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dog" translatable="false">http.dog</string>
    <string name="menu_cat" translatable="false">http.cat</string>
    <string name="menu_pizza" translatable="false">http.pizza</string>

    <string name="appearance">Appearance</string>
    <string name="appearance_settings">Appearance settings</string>
    <string name="settings">Settings</string>
    <string name="cont">Continue</string>
    <string name="switching_protocols">Switching Protocols</string>
    <string name="processing">Processing</string>
    <string name="early_hints">Early Hints</string>
    <string name="ok">OK</string>
    <string name="created">Created</string>
    <string name="accepted">Accepted</string>
    <string name="non_authoritative_info">Non-Authoritative Information</string>
    <string name="no_content">No Content</string>
    <string name="reset_content">Reset Content</string>
    <string name="partial_content">Partial Content</string>
    <string name="multi_status">Multi-Status</string>
    <string name="already_reported">Already Reported</string>
    <string name="this_is_fine">This is Fine</string>
    <string name="im_used">IM Used</string>
    <string name="multiple_choices">Multiple Choices</string>
    <string name="moved_permanently">Moved Permanently</string>
    <string name="found">Found</string>
    <string name="see_other">See Other</string>
    <string name="not_modified">Not Modified</string>
    <string name="use_proxy">Use Proxy</string>
    <string name="switch_proxy">Switch Proxy</string>
    <string name="temporary_redirect">Temporary Redirect</string>
    <string name="permanent_redirect">Permanent Redirect</string>
    <string name="bad_request">Bad Request</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="payment_required">Payment Required</string>
    <string name="forbidden">Forbidden</string>
    <string name="not_found">Not Found</string>
    <string name="method_not_allowed">Method Not Allowed</string>
    <string name="not_acceptable">Not Acceptable</string>
    <string name="proxy_authentication_required">Proxy Authentication Required</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="conflict">Conflict</string>
    <string name="gone">Gone</string>
    <string name="length_required">Length Required</string>
    <string name="precondition_failed">Precondition Failed</string>
    <string name="payload_too_large">Payload Too Large</string>
    <string name="uri_too_long">URI Too Long</string>
    <string name="unsupported_media_type">Unsupported Media Type</string>
    <string name="range_not_satisfiable">Range Not Satisfiable</string>
    <string name="expectation_failed">Expectation Failed</string>
    <string name="im_a_teapot">I\'m a teapot</string>
    <string name="page_expired">Page Expired</string>
    <string name="enhance_your_calm">Enhance Your Calm</string>
    <string name="misdirected_request">Misdirected Request</string>
    <string name="unprocessable_entity">Unprocessable Entity</string>
    <string name="locked">Locked</string>
    <string name="failed_dependency">Failed Dependency</string>
    <string name="too_early">Too Early</string>
    <string name="upgrade_required">Upgrade Required</string>
    <string name="precondition_required">Precondition Required</string>
    <string name="too_many_requests">Too Many Requests</string>
    <string name="request_header_fields_too_large">Request Header Fields Too Large</string>
    <string name="login_timeout">Login Time-out</string>
    <string name="no_response">No Response</string>
    <string name="retry_with">Retry With</string>
    <string name="blocked_by_windows_parental_controls">Blocked by Windows Parental Controls</string>
    <string name="unavailable_for_legal_reasons">Unavailable For Legal Reasons</string>
    <string name="client_closed_connection_prematurely">Client closed connection prematurely</string>
    <string name="too_many_forwarded_ip_addresses">Too many forwarded IP addresses</string>
    <string name="incompatible_protocol">Incompatible protocol</string>
    <string name="request_header_too_large">Request header too large</string>
    <string name="ssl_certificate_error">SSL Certificate Error</string>
    <string name="ssl_certificate_required">SSL Certificate Required</string>
    <string name="http_request_sent_to_https_port">HTTP Request Sent to HTTPS Port</string>
    <string name="invalid_token">Invalid Token</string>
    <string name="client_closed_request">Client Closed Request</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="bad_gateway">Bad Gateway</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="gateway_timeout">Gateway Timeout</string>
    <string name="http_version_not_supported">HTTP Version Not Supported</string>
    <string name="variant_also_negotiates">Variant Also Negotiates</string>
    <string name="insufficient_storage">Insufficient Storage</string>
    <string name="loop_detected">Loop Detected</string>
    <string name="bandwidth_limit_exceeded">Bandwidth Limit Exceeded</string>
    <string name="not_extended">Not Extended</string>
    <string name="network_authentication_required">Network Authentication Required</string>
    <string name="network_authorization_required">Network Authorization Required</string>
    <string name="web_server_return_unknown_error">Web server is returning an unknown error</string>
    <string name="web_server_is_down">Web server is down</string>
    <string name="connection_timed_out">Connection timed out</string>
    <string name="origin_is_unreachable">Origin is unreachable</string>
    <string name="a_timeout_occurred">A Timeout Occurred</string>
    <string name="ssl_handshake_failed">SSL handshake failed</string>
    <string name="invalid_ssl_certificate">Invalid SSL certificate</string>
    <string name="railgun_listener_to_origin">Railgun Listener to Origin</string>
    <string name="the_service_is_overloaded">The service is overloaded</string>
    <string name="site_frozen">Site Frozen</string>
    <string name="network_read_timeout_error">Network read timeout error</string>
    <string name="network_connect_timeout_error">Network Connect Timeout Error</string>
    <string name="request_denied">Request Denied</string>
    <string name="behavior">Behavior</string>
    <string name="initial_page">Initial page</string>
    <string name="change_applied_on_next_time_launch">This change will be applied the next time the app is launched</string>
</resources>