<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cat"
            android:title="@string/menu_cat" />
        <item
            android:id="@+id/nav_dog"
            android:title="@string/menu_dog" />
        <item
            android:id="@+id/nav_pizza"
            android:title="@string/menu_pizza" />
    </group>
    <group android:id="@+id/group_divider"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>